--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "demo"
+name = "posplexity"
 version = "0.1.0"
 description = ""
 authors = ["chaewon-huh <cw.huh@postech.ac.kr>"]
@@ -16,6 +16,7 @@ qdrant-client = "^1.12.2"
 docx = "^0.2.4"
 python-docx = "^1.1.2"
 pdfplumber = "^0.11.4"
+tqdm = "^4.67.1"
 
 
 [build-system]
