feat : add llm reranking logic

--- a/data/mapping.json
+++ b/data/mapping.json
@@ -6,5 +6,6 @@
     "포스텍 장학제도 안내.pdf":"https://drive.google.com/file/d/1g5TZGkQr6pT5u86owusS4fhg0F8lK1Wj/view?usp=drive_link",
     "AP 인정 신청 안내.pdf":"https://drive.google.com/file/d/1q6TpWFlrmM1YlMpvwStsAjJ3pJGxsMvA/view?usp=drive_link",
     "P13이란.docx":"https://docs.google.com/document/d/1TRQVqxVsJ_SteBHXVmyk6pahaziTzzhOQopGJ8wlPRM/edit?usp=drive_link",
-    "RC 규칙.docx":"https://docs.google.com/document/d/1agJI7OLtpDAzdWFE9bbvnPei-kfE4JndhEnI_BmTunI/edit?usp=drive_link"
+    "RC 규칙.docx":"https://docs.google.com/document/d/1agJI7OLtpDAzdWFE9bbvnPei-kfE4JndhEnI_BmTunI/edit?usp=drive_link",
+    "동아리_정보_모음.docx":"https://drive.google.com/file/d/14pzAlVRgi0j9o25wK7-WcJmLmQ5i4H4y/view?usp=drive_link"
 }
